# azure-datalake-utils

./: .bumpversion.cfg  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  example.ipynb  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  sitemap.xml  usage_example.ipynb
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
api/: index.html
azure_datalake_utils/: __init__.py  azure_datalake_utils.py  exepctions.py  experimental.py  partitions.py  storage_account_utils.py
changelog/: index.html
contributing/: index.html
docs/: api.md  example.ipynb  installation.md  usage.md  usage_example.ipynb.ipynb
installation/: index.html
search/: search_index.json
tests/: __init__.py  test_azure_datalake_utils.py  test_azure_exepctions.py  test_partitions.py
usage/: index.html
